2008-04-23  Andreia Gaita <avidigal@novell.com> 

	* Page.cs, Main.cs: Add event firing test

2008-04-22  Andreia Gaita <avidigal@novell.com> 

	* Page.cs: Added methods for Invoking scripts, getting and setting
	  attributes
	* Main.cs: Status information

2008-04-22  Andreia Gaita <avidigal@novell.com> 

	* Main.cs: Test OuterHTML

2008-04-09  Andreia Gaita <avidigal@novell.com> 

	* Page.cs, Main.cs, DomInspector.cs: Add support to get/set OuterText,
	  OuterHTML, Attributes