@@ -1,0 +1,22 @@
+<html><body id="BODY">
+<a href="javascript:alert(document.body.innerHTML)">alert innerHTML</a><br>
+<a href="javascript:alert(document.body.innerText)">alert innerText</a><br>
+<a href="javascript:alert(document.getElementById('content'))">alert div content</a><br>
+<a href="#ananchor">jump to anchor below</a><br>
+<a href="">empty link</a><br>
+<div id="content">
+	<form name="form1">
+		<input type="text" name="textbox" id="textbox" />
+		<input type="button" name="button1" id="button1" value="a button" />
+	</form>
+	whatever<br>
+	some more<br>
+	<a href="somelink">a non-existing link</a><br>
+	<a name="ananchor" href="somelink">a link with an anchor and a non-existing href</a><br>
+	<span>a span</span><br>
+	<p><blockquote>some text in a paragraph and a blockquote</blockquote></p>
+	<img src="" />
+</div>
+
+<p style="padding: 0; border: solid 1px black;">a paragraph with the following style: padding: 0; border: solid 1px black;</p>
+</body></html>
